Se corrigen issues 1 y 2
Signed-off-by: Patricio Díaz <padiazg@gmail.com>

--- a/mongodb-linux-mac.yml
+++ b/mongodb-linux-mac.yml
@@ -12,4 +12,4 @@ services:
       - "27017:27017"
 
     volumes:
-      - f:\docker-volumes\mongodb\db:/data/db
+      - /var/docker-volumes/mongodb/db:/data/db
